test/parsetest/invalid/g5_missingParens.java
class A {
  public void a() {
    
     return new Object;
     
  }
}
